################################################################################

################################################################################
# v0.32.1 - Unpublished
################################################################################

# Mejor changes  ---------------------------------------------------------------
- New tool for MT interaction
- Introduced new file format (.am) for readout

# Minor changes ----------------------------------------------------------------

# Bug Fix ----------------------------------------------------------------------
- bug fix in the button reactivity, repleaced all shinyAlert to sweetAlert

# Other ------------------------------------------------------------------------
- Added paraller procesing library

################################################################################
# v0.32 - Published 30/08/2020
################################################################################

# Mejor changes  ---------------------------------------------------------------
- Code reviewed and standardized according to the tidyverse guidelines
- Added renv library management 
- Added custom test unit

# Minor changes ----------------------------------------------------------------
- Added node_id as an output of end_morpology

# Bug Fix ----------------------------------------------------------------------
- Review entire code (v0.31.1)

# Other ------------------------------------------------------------------------
- added ASGA logo

################################################################################
# v0.31.1 - Published 17/07/2020
################################################################################

# Mejor changes  ---------------------------------------------------------------
- Added Torque and helicity tools

# Minor changes ----------------------------------------------------------------
