@@ -27,6 +27,7 @@ source("bin/Utility/Pre_Analysis.R")
 source("bin/Utility/Load_Data.R")
 source("bin/Utility/Load_Amira.R")
 source("bin/Utility/Save_Data.R")
+source("bin/Utility/Save_Amira.R")
 
 # Global server settings  ------------------------------------------------------
 options(shiny.maxRequestSize = 1024 * 1024^2)
